[package]
name = "xendit"
version = "0.0.1"
description = "Xendit Rust SDK"
authors = ["Hanjara Adhyatma"]
edition = "2021"
license = "MIT"
homepage = "https://x.com/papanberjalan"
repository = "https://github.com/mashanz/xendit-rust"
readme = "README.md"
keywords = ["xendit", "sdk"]
categories = ["xendit", "sdk"]

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
data-encoding = "2.6.0"
reqwest = {version = "0.12.4", features = ["json"] }
serde = {version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"
serde_qs = "0.13.0"
serde_with = "3.8.1"
tokio = {version = "1.37.0", features = ["full"]}

[dev-dependencies]
dotenv = "0.15.0"
